[tool.poetry]
name = "flag-hub"
version = "0.1.0"
description = ""
authors = ["Shaun Norman <shaun@speedfreaks.com.au>"]

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
